# skyrim-alchemy-rs

./: .gitignore  Cargo.toml  LICENSE  TODO.md  run-within-modorganizer.sh
src/: game_data.rs  lib.rs  load_order.rs  main.rs  potion.rs  potions_list.rs  shared_effects_cache.rs
src/plugin_parser/: form_id.rs  group.rs  ingredient.rs  magic_effect.rs  mod.rs  strings_table.rs  utils.rs
src/save_parser/: mod.rs
