[package]
edition = "2021"
name = "skyrim-alchemy-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
arrayvec = "0.7.2"
bsa = "0.2.1"
encoding_rs = "0.8.28"
esplugin = {git = "https://github.com/mickdekkers/esplugin", branch = "custom-tweaks"}
itertools = "0.10.3"
lazy_static = "1.4.0"
libloadorder = {git = "https://github.com/Ortham/libloadorder", rev = "d35d61290e2df1fcc9b19be8e453d2cb7bb3ce38"}
memmap = "0.7.0"
nom = "7.0.0"
once_cell = "1.12.0"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
skyrim_savegame = {git = "https://github.com/Jupp56/skyrim_savegame", rev = "1f3aa96c8e0dfc22a6ebaf53261395854988e8a5"}
thiserror = "1.0.31"
