[package]
edition = "2021"
name = "skyrim-alchemy-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
arrayvec = "0.7.2"
bsa = "0.2.1"
encoding_rs = "0.8.28"
env_logger = "0.9.0"
esplugin = {git = "https://github.com/mickdekkers/esplugin", branch = "custom-tweaks"}
itertools = "0.10.3"
lazy_static = "1.4.0"
libloadorder = {git = "https://github.com/Ortham/libloadorder", rev = "d35d61290e2df1fcc9b19be8e453d2cb7bb3ce38"}
log = "0.4.17"
log_err = "1.1.1"
memmap2 = "0.5.3"
nom = "7.0.0"
once_cell = "1.12.0"
ouroboros = "0.15.0"
rayon = "1.5.3"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
skyrim_savegame = {git = "https://github.com/mickdekkers/skyrim_savegame", branch = "fix/ref-id-parsing"}
thiserror = "1.0.31"
